[Heart] Change look

--- a/heart.html
+++ b/heart.html
@@ -27,6 +27,7 @@
   body {
     margin:0;
     text-align:center;
+    background:black;
   }
   svg {
     transition:opacity 1s;
@@ -35,18 +36,21 @@
     user-select:none;
   }
   path {
-    fill:white;
-    stroke:black;
+    fill:black;
+    stroke:white;
     stroke-width:1;
     stroke-linecap:round;
     stroke-linejoin:round;
+  }
+  text {
+    fill:white;
   }
 </style>
 </head>
 <body>
 <svg xmlns="http://www.w3.org/2000/svg" viewBox='-96 -80 192 160'>
-  <text x=-27 y=-60 id='greeting'>Hé lô người đẹp!</text>
-  <text x=-40 y=-50 id='question'>Bé có người yêu chưa?<animate attributeName='x' to='-51' dur='1.3s' fill='freeze' begin='indefinite'/></text>
+  <text x=-27 y=-80 id='greeting'>Hé lô người đẹp!</text>
+  <text x=-40 y=-70 id='question'>Bé có người yêu chưa?<animate attributeName='x' to='-51' dur='1.3s' fill='freeze' begin='indefinite'/></text>
   <path id='yes' class='btn' transform='translate(-32 -8) scale(0.5 0.5)' onclick='accept()' d='M 17,17 C 12.3,21.7 6.1,24 0,24 -6.1,24 -12.3,21.7 -17,17 M-17,17C-32,1.9 -21.4,-23.9 0,-23.9 21.4,-23.9 32,1.9 17,17'>
     <animate attributeName='d'dur='1s' fill='freeze' begin='indefinite' onend='changeScene()' to='M 64,48 C 64,48 64,48 64,48 64,34 38,26 38,10 M 38,10 C 38,0 44.5,-5 51,-5 57.5,-5 64,0 64,10'/>
   </path>
@@ -69,6 +73,7 @@
       y:y,
       sub:o => V(x-o.x, y-o.y),
       mad:(scalar, o) => V(x*scalar+o.x, y*scalar+o.y),
+      mul:scalar => V(x*scalar, y*scalar),
       dot:o => x*o.x + y*o.y,
       sign:o => Math.sign(x*o.x + y*o.y),
       r90:() => V(y, -x),
@@ -145,9 +150,10 @@
     function showHidden(value) {
       hiddenTxt.style.opacity = value
     }
+    const pow = (num,pow) => Math.sign(num) * Math.pow(Math.abs(num), pow)
     let hearts = []
-    const accel = -0.2
-    const drag = 0.997
+    const accel = -1
+    const drag = 0.98
     let size = 1
     function changeScene() {
       yesBtn.style.display = 'none'
@@ -161,16 +167,16 @@
             num = Math.round(num)
             if (num < 0)
               num = 0
-            else if (num > 15)
-              num = 15
+            else if (num > 31)
+              num = 31
             else return num
             svg.removeChild(path)
             svg.appendChild(path)
             return num
           }
-          const index = clamp(path.pos.x/size/2.3+7.5) + clamp(path.pos.y/size/2.3+7)*16
-          path.style.opacity = 1
-          path.vel = path.vel.mad(drag, V((mapX.charCodeAt(index)/255-0.5)*accel, (mapY.charCodeAt(index)/225-0.5)*accel))
+          const index = clamp(path.pos.x/size+15.6) + clamp(path.pos.y/size+14)*32
+          const accelx=(mapX.charCodeAt(index)/255-0.5), accely=(mapY.charCodeAt(index)/255-0.5)
+          path.vel = path.vel.mad(drag, V(pow(accelx,2)*accel, pow(accely,2)*accel))
           path.anim.setAttribute('to', path.pos)
           path.anim.beginElement()
         }
@@ -179,7 +185,7 @@
     var heartDone = true
     var roundHeart = false
     const svgUrl = 'http://www.w3.org/2000/svg'
-    const colors = [[255,200,220], [255,70,120]]
+    const colors = [[255,200,220, 0.6], [255,70,120, 1]]
     const heartPath = ['M', 32.5,-8.38, 'C', 32.5,16.6, 0,34.1, 0,34.1, 0,34.1, -32.5,16.6, -32.5,-8.38, -32.5,-33.4, 0,-33.4, 0,-8.38, 0,-33.4, 32.5,-33.4, 32.5,-8.38]
     function heartbeat() {
       promptTxt.style.opacity = 0
@@ -198,49 +204,61 @@
           heart.parentNode.children[1].setAttribute('values', size+';'+(size+0.3)+';'+size)
           heart.parentNode.children[1].setAttribute('keyTimes', '0;0.3;1')
           roundHeart = true
+          size += 1.35
           heart.children[0].beginElement()
         }
         heart.parentNode.children[1].beginElement()
         heart.parentNode.children[1].onend = ()=>heartDone = true
-        const pos = (size-1)/2
-        heart.style.fill = 'rgb(255,255,255,' + (1-pos*pos*pos*0.1) + ')'
+        const pos = Math.min((size-1)/2, 1)
+        heart.style.fill = 'rgb(0,0,0,' + (1-pos*pos*pos) + ')'
         heart.style.strokeWidth = 1-pos*0.3
-        heart.style.stroke = 'rgb(' + 255*pos + ',' + 60*pos + ',' + 100*pos + ')'
-        questionTxt.style.fill = 'rgb(' + 128*pos + ',' + 30*pos + ',' + 50*pos + ')'
+        heart.style.stroke = 'rgb(' + 255 + ',' + (255-190*pos) + ',' + (255-150*pos) + ','+(1-pos*pos*pos*0.6)+ ')'
+        questionTxt.style.fill = 'rgb(' + 255 + ',' + (255-90*pos) + ',' + (255-70*pos) + ')'
         heartDone = false
-        for (let i = 0; i < 4*size; i++) {
-          const path = document.createElementNS(svgUrl, 'path')
-          const animate = document.createElementNS(svgUrl, 'animateTransform')
-          const scale = (Math.pow(Math.random(),4)*0.07+0.025)*size
-          path.setAttribute('d', heartPath.map(item => typeof item == 'string' ? item : item*scale).join(' '))
-          path.style.stroke = 'none'
-          path.pos = V((Math.random()-0.5)*10*size, (Math.random()-0.3)*10*size)
-          path.vel = V((Math.random()-0.5)*4, (Math.random()-0.5)*4)
-          path.style.fill = 'rgb('+colors[0].map((c,i) => c+Math.random()*(colors[1][i]-c)).join(',')+')'
-          path.style.opacity = 0
-          path.anim = animate
-          animate.setAttribute('attributeName', 'transform')
-          animate.setAttribute('type', 'translate')
-          animate.setAttribute('dur', '100ms')
-          path.appendChild(animate)
-          svg.prepend(path)
-          hearts.push(path)
+        if (roundHeart) {
+          for (const path of hearts) {
+            path.vel = V(pow(path.vel.x/20, Math.random()+0.5)*20, pow(path.vel.y/20, Math.random()+0.5)*20)
+          }
+        } else {
+          for (let i = 0; i < 128; i++) {
+            const path = document.createElementNS(svgUrl, 'path')
+            const animate = document.createElementNS(svgUrl, 'animateTransform')
+            const scale = (Math.pow(Math.random(),4)*0.04+0.03)*Math.sqrt(size)
+            path.setAttribute('d', heartPath.map(item => typeof item == 'string' ? item : item*scale).join(' '))
+            path.style.stroke = 'none'
+            path.pos = V((Math.random()-0.5)*10*size, (Math.random()-0.3)*10*size)
+            path.vel = V((Math.random()-0.5)*10, (Math.random()-0.5)*10)
+            path.style.fill = 'rgb('+colors[0].map((c,i) => c+Math.random()*(colors[1][i]-c)).join(',')+')'
+            path.style.opacity = 0
+            path.style.pointerEvents='none'
+            path.anim = animate
+            animate.setAttribute('attributeName', 'transform')
+            animate.setAttribute('type', 'translate')
+            animate.setAttribute('dur', '100ms')
+            path.appendChild(animate)
+            svg.prepend(path)
+            hearts.push(path)
+          }
+          setTimeout(() => {
+            for(const path of hearts)
+              path.style.opacity = 1
+          }, 1)
         }
       }
     }
-    const mapX = '\xff\xff\xfe\xfb\xf9\xfd\xfc\xc69\x03\x01\x04\x04\x01\x00\x00\xff\xfb\xe9\xd0\xd1\xee\xfa\xc69\x03\x0a%,\x16\x04\x00\xfd\xe7\xa3c}\xd3\xf5\xc59\x05\x1bi\x93\x5c\x18\x02\xf6\xbfR#]\xcd\xf1\xc39\x05!\x85\xd2\xac?\x09\xea\x98+\x14[\xcf\xf0\xbe8\x05"\x8b\xe2\xd3f\x14\xe6\x8b#\x11Y\xd0\xf3\xbd9\x06(\x97\xe8\xdbt\x19\xea\x99)\x0eJ\xbd\xef\xc1:\x0d?\xb2\xf0\xd6f\x15\xf4\xb5=\x0b%y\xc2\xb2K<\x85\xda\xf4\xc2I\x0b\xfc\xd6m\x1a\x0a(\x5c|\x82\xa3\xd7\xf5\xe5\x92)\x03\xfe\xf0\xafG\x0f\x06\x15I\xb6\xea\xf9\xf1\xb9P\x10\x01\xff\xfc\xe2\x94:\x0c\x05:\xc5\xfa\xf3\xc5j\x1d\x03\x00\xff\xff\xf9\xda\x90>\x13;\xc4\xec\xc2o%\x06\x00\x00\xff\xff\xff\xf8\xdd\x9fQO\xb1\xb0c"\x07\x00\x00\x00\xff\xff\xff\xff\xfb\xe7\xb6\x84{J\x19\x05\x00\x00\x00\x00\xff\xff\xff\xff\xff\xfd\xef\xb7H\x10\x03\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xfb\xc5:\x04\x00\x00\x00\x00\x00\x00'
+    const mapX = "\xff\xff\xff\xff\xff\xff\xff\xff\xffL\x00\x00\x00\x00\x00\x18\xff\xff\xff\xff\xff\xff\x9a\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xffL\x00\x00\x00\x00\x00\x18\xff\xff\xff\xff\xff\xff\x9a\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xffL\x00\x00\x00\x00\x00\x18\xff\xff\xff\xff\xff\xff\x9a\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xffL\x00\x00\x00\x00\x00\x18\xff\xff\xff\xff\xff\xff\x9a\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xf5\xbe\x9ayfD\x0e\x00\x00\x18\xff\xff\xff\xf2\xbb\x9a\x84fD\x0e\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xe0\x89\x80\x80\x80\x80\x80\x80'\x00\x18\xff\xff\xd8\x80\x80\x80\x80\x80\x80z'\x00\x00\x00\x00\x00\xff\xff\xff\xff\xed\x87\x80\x80\x80\x80\x80\x80\x80\x80\x1a\x18\xff\xe5\x80\x80\x80\x80\x80\x80\x80\x80|\x1a\x00\x00\x00\x00\xff\xff\xff\xff\xac\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x18\xff\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80`\x00\x00\x00\x00\xff\xff\xff\xfa\x83\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80%\xf0\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x10\x00\x00\x00\xff\xff\xff\xdf\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80-\x00\x00\x00\xff\xff\xff\xd2\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80:\x00\x00\x00\xff\xff\xff\xd0\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x3c\x00\x00\x00\xff\xff\xff\xdb\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x801\x00\x00\x00\xff\xff\xff\xf2\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x19\x00\x00\x00\xff\xff\xff\xff\x92\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80w\x02\x00\x00\x00\xff\xff\xff\xff\xc0\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80J\x00\x00\x00\x00\xff\xff\xff\xff\xf3\x85\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80~\x15\x00\x00\x00\x00\xff\xff\xff\xff\xff\xbb\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80P\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xfa\x91\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80v\x0b\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xe1\x82\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x7f'\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xcb\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80?\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xc7\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80H\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xc1\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80J\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xcd\x82\x80\x80\x80\x80\x80\x80\x80\x80\x7f@\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xdc\x88\x80\x80\x80\x80\x80\x80z+\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xf0\x9e\x80\x80\x80\x80f\x14\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xfd\xc5\x85\x7b=\x03\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xef\x11\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00"
 
-    const mapY = '\xff\xff\xfe\xfa\xf6\xf8\xfc\xff\xff\xfc\xf8\xf6\xfa\xfe\xff\xff\xff\xfb\xeb\xcd\xb8\xc0\xdb\xf4\xf4\xdb\xc1\xb8\xcc\xe9\xfb\xff\xfd\xe9\xa6Y7Ay\xc4\xc5{B7W\xa3\xe8\xfd\xf6\xc2T\x15\x05\x09+mo-\x0a\x05\x14R\xc0\xf5\xdb\x9b=\x1b\x15\x10\x1824\x1a\x10\x16\x1b<\x98\xd9\x8f\x82sm_:(*+(9_mr\x81\x8f2g\xbc\xd8\xbba"\x12\x12"_\xba\xd8\xbdj2\x0cH\xc1\xf5\xeb\xaaY33X\xa8\xea\xf6\xc4L\x0d\x03(\x91\xe5\xf9\xea\xc9\xac\xab\xc8\xea\xf9\xe7\x95+\x04\x01\x0fO\xb8\xf2\xfc\xf9\xf2\xf1\xf9\xfd\xf2\xbbR\x10\x01\x00\x03\x1cj\xc6\xf3\xfd\xfe\xfe\xfe\xf4\xc8m\x1e\x03\x00\x00\x00\x06%o\xc2\xef\xfc\xfc\xf0\xc5r&\x06\x00\x00\x00\x00\x00\x07!a\xb1\xe0\xe1\xb4e#\x07\x00\x00\x00\x00\x00\x00\x00\x04\x18J\x87\x88L\x1a\x05\x00\x00\x00\x00\x00\x00\x00\x00\x00\x02\x0e!!\x0e\x03\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x01\x02\x02\x01\x00\x00\x00\x00\x00\x00'
+    const mapY = "\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xf9\xda\xce\xda\xf8\xff\xff\xff\xff\xff\xff\xff\xff\xf8\xda\xce\xda\xf9\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xc6\x86\x80\x80\x80\x85\xc0\xfe\xff\xff\xff\xff\xfe\xc2\x86\x80\x80\x80\x86\xc4\xfe\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xbf\x80\x80\x80\x80\x80\x80\x80\xb4\xff\xff\xff\xff\xb8\x80\x80\x80\x80\x80\x80\x80\xb9\xff\xff\xff\xff\xff\xff\xff\xff\xff\xee\x81\x80\x80\x80\x80\x80\x80\x80\x80\xe2\xff\xff\xe4\x80\x80\x80\x80\x80\x80\x80\x80\x80\xe5\xff\xff\xff\xff\xff\xff\xff\xff\xbc\x80\x80\x80\x80\x80\x80\x80\x80\x80\xb0\xff\xff\xb1\x80\x80\x80\x80\x80\x80\x80\x80\x80\xb2\xff\xff\xff\xff\xff\xff\xff\xff\x9e\x80\x80\x80\x80\x80\x80\x80\x80\x80\x92\xff\xff\x92\x80\x80\x80\x80\x80\x80\x80\x80\x80\x93\xff\xff\xff\xff\xff\xff\xff\xff\x92\x80\x80\x80\x80\x80\x80\x80\x80\x80\x86\xff\xff\x85\x80\x80\x80\x80\x80\x80\x80\x80\x80\x86\xff\xff\xff\xff\xff\xff\xff\xff\x91\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\xe9\xe9\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x84\xff\xff\xff\xff\xff\xff\xff\xff\x9b\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x81\x81\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x8f\xff\xff\xff\xff\xab\xab\xab\xab\x8f\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x8b\xab\xab\xab\xab\x00\x00\x00\x00)\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x806\x00\x00\x00\x00\x00\x00\x00\x00\x04v\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80|\x09\x00\x00\x00\x00\x00\x00\x00\x00\x00\x3e\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80H\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x06p\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80w\x0b\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x1f~\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80.\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00B\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80Q\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x02X\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x5c\x04\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x03\x5b\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80a\x06\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x05^\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80^\x06\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x02L\x80\x80\x80\x80\x80\x80\x80\x80U\x04\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x009\x7d\x80\x80\x80\x80~\x3c\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x1cl\x80\x80m\x1e\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x04??\x04\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00"
 
-    //const safeChar = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"i~`!@#$%^&*()_+-={}|[]\;:<>?,./'
-    //let newMapX = ''
-    //for (let i=0; i < mapX.length; i+=4)
-    //  newMapX += safeChar.includes(mapX.charAt(i)) ? mapX.charAt(i) : '\\x'+mapX.charCodeAt(i).toString(16).padStart(2,'0')
-    //let newMapY = ''
-    //for (let i=0; i < mapY.length; i+=4)
-    //  newMapY += safeChar.includes(mapY.charAt(i)) ? mapY.charAt(i) : '\\x'+mapY.charCodeAt(i).toString(16).padStart(2,'0')
-    //console.log(newMapX)
-    //console.log(newMapY)
+    const safeChar = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789'i~`!@#$%^&*()_+-=|\;:?,./"
+    let newMapX = '"'
+    for (let i=0; i < mapX.length; i+=4)
+      newMapX += safeChar.includes(mapX.charAt(i)) ? mapX.charAt(i) : '\\x'+mapX.charCodeAt(i).toString(16).padStart(2,'0')
+    let newMapY = '"'
+    for (let i=0; i < mapY.length; i+=4)
+      newMapY += safeChar.includes(mapY.charAt(i)) ? mapY.charAt(i) : '\\x'+mapY.charCodeAt(i).toString(16).padStart(2,'0')
+    console.log(newMapX + '"')
+    console.log(newMapY + '"')
   </script>
 </svg>
 </body>
