[Heart] fix viewbox and optimize performance

--- a/heart.html
+++ b/heart.html
@@ -31,8 +31,6 @@
   }
   svg {
     transition:opacity 1s;
-    width:100vmin;
-    height:100vmin;
     user-select:none;
   }
   path {
@@ -102,6 +100,15 @@
       noBtn.setAttribute('d', interpolate(distortedPath, circlePath, Math.max(Math.min(dist-0.4, 1), 0)).join(' '))
       noBtn.setAttribute('transform', transformTemplate.replace('{rot}', Math.atan2(-diff.x, diff.y)*57.3))
     }
+    const updateViewbox = ()=>{
+      const ratio = window.innerWidth / window.innerHeight
+      const minSize = 180
+      const viewBox = ratio > 1 ? Math.round(-minSize*ratio/2) + ' ' + -minSize/2 + ' ' + Math.round(minSize*ratio) + ' ' + minSize : -minSize/2 + ' ' + Math.round(-minSize/ratio/2) + ' ' + minSize + ' ' + Math.round(minSize/ratio)
+      console.log(viewBox)
+      svg.setAttribute('viewBox', viewBox)
+    }
+    window.addEventListener('resize', updateViewbox)
+    updateViewbox()
     function reject() {
       svg.style.opacity = 0
     }
@@ -161,6 +168,8 @@
       heart.style.display = 'unset'
       setInterval(() => {
         for (const path of hearts) {
+          if (path.sleep)
+            continue
           path.anim.setAttribute('from', path.pos)
           path.pos = path.pos.sub(path.vel)
           const clamp = num => {
@@ -176,7 +185,10 @@
           }
           const index = clamp(path.pos.x/size+15.6) + clamp(path.pos.y/size+14)*32
           const accelx=(mapX.charCodeAt(index)/255-0.5), accely=(mapY.charCodeAt(index)/255-0.5)
-          path.vel = path.vel.mad(drag, V(pow(accelx,2)*accel, pow(accely,2)*accel))
+          path.accel = V(pow(accelx,2)*accel, pow(accely,2)*accel)
+          path.vel = path.vel.mad(drag, path.accel)
+          if (path.vel.dot(path.vel) < 0.01 && path.accel.dot(path.accel) < 0.01)
+            path.sleep = true
           path.anim.setAttribute('to', path.pos)
           path.anim.beginElement()
         }
@@ -185,7 +197,7 @@
     var heartDone = true
     var roundHeart = false
     const svgUrl = 'http://www.w3.org/2000/svg'
-    const colors = [[255,200,220, 0.6], [255,70,120, 1]]
+    const colors = [[255,200,220, 0.5], [255,70,120, 1]]
     const heartPath = ['M', 32.5,-8.38, 'C', 32.5,16.6, 0,34.1, 0,34.1, 0,34.1, -32.5,16.6, -32.5,-8.38, -32.5,-33.4, 0,-33.4, 0,-8.38, 0,-33.4, 32.5,-33.4, 32.5,-8.38]
     function heartbeat() {
       promptTxt.style.opacity = 0
@@ -212,18 +224,22 @@
         const pos = Math.min((size-1)/2, 1)
         heart.style.fill = 'rgb(0,0,0,' + (1-pos*pos*pos) + ')'
         heart.style.strokeWidth = 1-pos*0.3
-        heart.style.stroke = 'rgb(' + 255 + ',' + (255-190*pos) + ',' + (255-150*pos) + ','+(1-pos*pos*pos*0.6)+ ')'
+        heart.style.stroke = 'rgb(' + 255 + ',' + (255-190*pos) + ',' + (255-150*pos) + ','+(1-pos*pos*pos*0.5)+ ')'
         questionTxt.style.fill = 'rgb(' + 255 + ',' + (255-90*pos) + ',' + (255-70*pos) + ')'
         heartDone = false
-        if (roundHeart) {
-          for (const path of hearts) {
-            path.vel = V(pow(path.vel.x/20, Math.random()+0.5)*20, pow(path.vel.y/20, Math.random()+0.5)*20)
-          }
-        } else {
-          for (let i = 0; i < 128; i++) {
+        for (const path of hearts) {
+          const rand = roundHeart ? Math.random()*1.2 + 0.3 : Math.random()*0.4+0.8
+          if (rand < 1)
+            path.sleep = false
+          const len = Math.sqrt(path.vel.dot(path.vel))
+          const mul = Math.pow(len/20, rand)*20 / len
+          path.vel = V(path.vel.x *mul, path.vel.y *mul)
+        }
+        if (!roundHeart) {
+          for (let i = 0; i < 130; i++) {
             const path = document.createElementNS(svgUrl, 'path')
             const animate = document.createElementNS(svgUrl, 'animateTransform')
-            const scale = (Math.pow(Math.random(),4)*0.04+0.03)*Math.sqrt(size)
+            const scale = (Math.pow(Math.random(),4)*0.04+0.04)*Math.sqrt(size)
             path.setAttribute('d', heartPath.map(item => typeof item == 'string' ? item : item*scale).join(' '))
             path.style.stroke = 'none'
             path.pos = V((Math.random()-0.5)*10*size, (Math.random()-0.3)*10*size)
@@ -235,6 +251,7 @@
             animate.setAttribute('attributeName', 'transform')
             animate.setAttribute('type', 'translate')
             animate.setAttribute('dur', '100ms')
+            animate.setAttribute('fill', 'freeze')
             path.appendChild(animate)
             svg.prepend(path)
             hearts.push(path)
@@ -250,15 +267,15 @@
 
     const mapY = "\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xf9\xda\xce\xda\xf8\xff\xff\xff\xff\xff\xff\xff\xff\xf8\xda\xce\xda\xf9\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xc6\x86\x80\x80\x80\x85\xc0\xfe\xff\xff\xff\xff\xfe\xc2\x86\x80\x80\x80\x86\xc4\xfe\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xbf\x80\x80\x80\x80\x80\x80\x80\xb4\xff\xff\xff\xff\xb8\x80\x80\x80\x80\x80\x80\x80\xb9\xff\xff\xff\xff\xff\xff\xff\xff\xff\xee\x81\x80\x80\x80\x80\x80\x80\x80\x80\xe2\xff\xff\xe4\x80\x80\x80\x80\x80\x80\x80\x80\x80\xe5\xff\xff\xff\xff\xff\xff\xff\xff\xbc\x80\x80\x80\x80\x80\x80\x80\x80\x80\xb0\xff\xff\xb1\x80\x80\x80\x80\x80\x80\x80\x80\x80\xb2\xff\xff\xff\xff\xff\xff\xff\xff\x9e\x80\x80\x80\x80\x80\x80\x80\x80\x80\x92\xff\xff\x92\x80\x80\x80\x80\x80\x80\x80\x80\x80\x93\xff\xff\xff\xff\xff\xff\xff\xff\x92\x80\x80\x80\x80\x80\x80\x80\x80\x80\x86\xff\xff\x85\x80\x80\x80\x80\x80\x80\x80\x80\x80\x86\xff\xff\xff\xff\xff\xff\xff\xff\x91\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\xe9\xe9\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x84\xff\xff\xff\xff\xff\xff\xff\xff\x9b\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x81\x81\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x8f\xff\xff\xff\xff\xab\xab\xab\xab\x8f\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x8b\xab\xab\xab\xab\x00\x00\x00\x00)\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x806\x00\x00\x00\x00\x00\x00\x00\x00\x04v\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80|\x09\x00\x00\x00\x00\x00\x00\x00\x00\x00\x3e\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80H\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x06p\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80w\x0b\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x1f~\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80.\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00B\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80Q\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x02X\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x5c\x04\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x03\x5b\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80a\x06\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x05^\x80\x80\x80\x80\x80\x80\x80\x80\x80\x80^\x06\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x02L\x80\x80\x80\x80\x80\x80\x80\x80U\x04\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x009\x7d\x80\x80\x80\x80~\x3c\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x1cl\x80\x80m\x1e\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x04??\x04\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00"
 
-    const safeChar = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789'i~`!@#$%^&*()_+-=|\;:?,./"
-    let newMapX = '"'
-    for (let i=0; i < mapX.length; i+=4)
-      newMapX += safeChar.includes(mapX.charAt(i)) ? mapX.charAt(i) : '\\x'+mapX.charCodeAt(i).toString(16).padStart(2,'0')
-    let newMapY = '"'
-    for (let i=0; i < mapY.length; i+=4)
-      newMapY += safeChar.includes(mapY.charAt(i)) ? mapY.charAt(i) : '\\x'+mapY.charCodeAt(i).toString(16).padStart(2,'0')
-    console.log(newMapX + '"')
-    console.log(newMapY + '"')
+    //const safeChar = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789'i~`!@#$%^&*()_+-=|\;:?,./"
+    //let newMapX = '"'
+    //for (let i=0; i < mapX.length; i+=4)
+    //  newMapX += safeChar.includes(mapX.charAt(i)) ? mapX.charAt(i) : '\\x'+mapX.charCodeAt(i).toString(16).padStart(2,'0')
+    //let newMapY = '"'
+    //for (let i=0; i < mapY.length; i+=4)
+    //  newMapY += safeChar.includes(mapY.charAt(i)) ? mapY.charAt(i) : '\\x'+mapY.charCodeAt(i).toString(16).padStart(2,'0')
+    //console.log(newMapX + '"')
+    //console.log(newMapY + '"')
   </script>
 </svg>
 </body>
